Fixed card spacing

--- a/src/components/Portfolio/pfCard.css
+++ b/src/components/Portfolio/pfCard.css
@@ -4,32 +4,34 @@
     background: indigo;
     border-style: solid;
     border-color: orange;
-    border-width: 4px 4px 4px 4px;
-    width: 80%;
-    height: 450px;
+    border-width: 5px 5px 5px 5px;
+    width: 40vw;
+    height: 75vh;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    margin-right: 5vw;
+    margin-left: 5vw;
     
 }
-.cardImage{
+/* .cardImage{
     height: 50%;
     width: 100%;
     border: 20% 20% 20% 20%;
-    /* border-radius: 9999px; */
+    border-radius: 9999px;
     display: flex;
     justify-content: center;
     align-items: center;
 
-    
-}
+} */
 
 .projectImg{
-    height: 150px;
-    width: 150px;
+    object-fit: contain ;
+    height: 100%;
+    width: 100%;
     padding: 0.5rem 0.5rem;
     background: white;
-    border-radius: 9999px;
+    /* border-radius: 9999px; */
     
     
     
